environments/test/us-east-1/argocd/manifests/istio-system/obervability/prometheus.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: prometheus-vs
  namespace: istio-system
spec:
  hosts:
  - "*"
  gateways:
  - istio-system/gateway
  exportTo:
  - istio-system
  http:
  - match:
    - uri:
        prefix: /graph
    route:
    - destination:
        host: prometheus
        port:
          number: 9090
